grammar.js
        source_file: $ => repeat(choice(
            $._icl_source_items,
            // Illegal by the spec but makes the testing much simpler
            $._module_statement,
        )),

        _icl_source_items: $ => choice(
            $.namespace_definition,
            prec(1, $.use_namespace_definition),
            $.module_definition
        ),
        _module_statement: $ => choice(
            $.use_namespace_definition,
            $._port_definition,
            $.instance_definition,
            $.scan_register_definition,
            $.data_register_definition,
            $.logic_signal_definition,
            $.scan_mux_definition,
            $.data_mux_definition,
            $.clock_mux_definition,
            $.onehot_data_group_definition,
            $.onehot_scan_group_definition,
            $.scan_interface_definition,
            $._access_link_definition,
            $.alias_definition,
            $.enum_definition,
            $.parameter_definition,
            $.local_parameter_definition,
            $.attribute_definition,
        ),

        scope: $ => prec.left(seq(choice($.scalar_identifier, $.parameter_reference), '::')),
        instance_definition: $ => seq(
            'Instance', $.scalar_identifier, 'Of',
            optional($.scope),
            $.scalar_identifier,
            choice(
                ';',
                seq('{', repeat($._instance_item), '}')
            ),
        ),
        _instance_item: $ => choice(
            $.input_port_connection,
            $.allow_broadcast_definition,
            $.attribute_definition,
            alias($.parameter_definition,$.parameter_override),
            $.address_value,
        ),
        input_port_connection: $ => seq(
            'InputPort', $.scalar_identifier, '=', $.concat_signal, ';'
        ),
        allow_broadcast_definition: $ => seq(
            'AllowBroadcastOnScanInterface', $.scalar_identifier, ';'
        ),
        address_value: $ => seq(
            'AddressValue', $._number, ';'
        ),

        scan_register_definition: $ => seq(
            'ScanRegister', $.scalar_identifier,
            choice(
                ';',
                seq('{', repeat($._scan_register_item), '}')
            ),
        ),
        _scan_register_item: $ => choice(
            $.attribute_definition,
            $.scan_in_source,
            $.default_load_value,
            $.capture_source,
            $.reset_value,
            $.ref_enum,
        ),
        scan_in_source: $ => seq(
            'ScanInSource', $.concat_signal, ';'
        ),
        default_load_value: $ => seq(
            'DefaultLoadValue', choice($.concat_number, $.scalar_identifier), ';'
        ),
        capture_source: $ => seq(
            'CaptureSource', choice($.concat_signal, $.scalar_identifier), ';'
        ),
        reset_value: $ => seq(
            'ResetValue', choice($.concat_number, $.scalar_identifier), ';'
        ),

        data_register_definition: $ => seq(
            'DataRegister', $.scalar_identifier,
            choice(
                ';',
                seq('{', repeat($._data_register_item), '}')
            ),
        ),
        _data_register_item: $ => choice(
            $._data_register_type,
            $._data_register_common,
        ),
        selectable: $ => choice(
            $.write_en_source,
            $.write_data_source,
        ),

        write_en_source: $ => seq(
            'WriteEnSource', optional('~'), $.signal, ';'
        ),
        write_data_source: $ => seq(
            'WriteDataSource', $.concat_signal, ';'
        ),
        read_callback: $ => choice(
            $.read_callback_proc,
            $.read_data_source,
        ),
        read_callback_proc: $ => seq(
            'ReadCallBack', $.i_proc_namespace, $.i_proc_name, repeat($.i_proc_args), ';'
        ),
        read_data_source: $ => seq(
            'ReadDataSource', $.concat_signal, ';'
        ),
        write_callback: $ => seq(
            'WriteCallBack', $.i_proc_namespace, $.i_proc_name, repeat($.i_proc_args), ';'
        ),
        i_proc_namespace: $ => prec.left(seq(
            optional($.scope), choice($.scalar_identifier, $.parameter_reference), optional($.sub_scope)
        )),
        i_proc_name: $ => choice($.scalar_identifier, $.parameter_reference),
        scalar_identifier: $ => /[a-zA-Z][a-zA-Z0-9_$]*/,
        vector_identifier: $ => seq(
            $.scalar_identifier,
            '[', choice($.index, $.range), ']'
        ),
        enum_name: $ => /[a-zA-Z][a-zA-Z0-9_$]*/,
        //enum_name: $ => alias($.scalar_identifier, $.enum_name),

        enum_definition: $ => seq(
            'Enum', $.enum_name, '{', repeat($.enum_item), '}'
        ),
        enum_item: $ => seq(
            $.scalar_identifier, '=', $.concat_number, ';'
        ),


        index: $ => $.integer_expression,
        range: $ => seq($.index, ':', $.index),

        ref_enum: $ => seq(
            'RefEnum', $.enum_name, ';'
        ),
        attribute_definition: $ => seq(
            'Attribute', $.scalar_identifier,
            optional(seq('=', $.attribute_value)),
            ';'
        ),
        attribute_value: $ => choice(
            $.concat_number,
            $.concat_string
        ),

        parameter_value: $ => choice(
            $.concat_number,
            $.concat_string
        ),

        mux_body: $ => seq(
            $.concat_number_list, ':', $.concat_signal, ';'
        ),
        scan_mux_definition: $ => seq(
            'ScanMux', $.scalar_identifier, 'SelectedBy', $.concat_signal,
            '{', repeat($.mux_body), '}',
        ),
        data_mux_definition: $ => seq(
            'DataMux', $.scalar_identifier, 'SelectedBy', $.concat_signal,
            '{', repeat($.mux_body), '}',
        ),
        clock_mux_definition: $ => seq(
            'ClockMux', $.scalar_identifier, 'SelectedBy', $.concat_signal,
            '{', repeat($.mux_body), '}',
        ),

        onehot_scan_group_definition: $ => seq(
            'OneHotScanGroup', $.scalar_identifier,
            '{', repeat($.onehot_scan_group_item), '}',
        ),
        onehot_scan_group_item: $ => seq(
            'Port', $.concat_signal, ';'
        ),
        onehot_data_group_definition: $ => seq(
            'OneHotDataGroup', $.scalar_identifier,
            '{', repeat($._onehot_data_group_item), '}',
        ),
        _onehot_data_group_item: $ => choice(
            $.instance_definition,
            $.data_register_definition,
            $.onehot_data_group_port_source
        ),
        onehot_data_group_port_source: $ => seq(
            'Port', $.concat_signal, ';'
        ),

        scan_interface_definition: $ => seq(
            'ScanInterface', $.scalar_identifier,
            '{', repeat($._scan_interface_item), '}',
        ),
        _scan_interface_item: $ => choice(
            $.attribute_definition,
            $.scan_interface_port_definition,
            $.default_load_definition,
            $.scan_interface_chain_definition
        ),
        scan_interface_port_definition: $ => seq(
            'Port', $.concat_signal, ';'
        ),
        scan_interface_chain_definition: $ => seq(
            'Chain', $.scalar_identifier,
            '{', repeat($._scan_interface_chain_item), '}',
        ),
        _scan_interface_chain_item: $ => choice(
            $.attribute_definition,
            $.scan_interface_port_definition,
            $.default_load_definition
        ),
        default_load_definition: $ => seq(
            'DefaultLoadValue', $.concat_number, ';'
        ),

        access_link_1149_definition: $ => seq(
            'AccessLink', $.scalar_identifier, 'Of',
            choice(
                'STD_1149_1_2001',
                'STD_1149_1_2013'
            ),
            '{',
            $.bsdl_entity,
            repeat($.bsdl_instruction_reference),
            '}',
        ),
        bsdl_entity: $ => seq(
            'BSDLEntity', $.scalar_identifier, ';',
        ),
        bsdl_instruction_reference: $ => seq(
            $.scalar_identifier, '{', repeat1($.bsdl_instruction_selected_item), '}',
        ),
        bsdl_instruction_selected_item: $ => choice(
            seq('ScanInterface', '{', repeat1($.access_link_1149_scan_interface_name), '}',),
            seq('ActiveSignals', '{', repeat1($.access_link_1149_active_signal_name), '}',),
        ),
        access_link_1149_scan_interface_name: $ => seq(
            $.scalar_identifier, optional(seq('.', $.signal)), ';'
        ),
        access_link_1149_active_signal_name: $ => seq(
            $._signal_identifier, ';'
        ),

        access_generic_link_definition: $ => seq(
            'AccessLink', $.scalar_identifier, 'Of', $.scalar_identifier,
            '{', repeat($._access_generic_link_item), '}',
        ),
        _access_generic_link_item: $ => choice(
            // Is this legal?
            seq('{',$._access_generic_link_item,'}'),
            $.access_generic_link_text,
            $.string
        ),
        alias_definition: $ => seq(
            'Alias', $._signal_identifier, '=', $.concat_hier_data_signal,
            choice(
                ';',
                seq('{', repeat($.alias_item), '}')
            ),
        ),
        alias_item: $ => choice(
            $.attribute_definition,
            seq('AccessTogether', ';'),
            $.alias_iApplyEndState,
            $.alias_refEnum
        ),
        alias_iApplyEndState: $ => seq(
            'iApplyEndState', $.concat_number, ';'
        ),
        alias_refEnum: $ => seq(
            'RefEnum', $.enum_name, ';'
        ),



        positive_integer: $ => /[0-9][0-9_]*/,

        signal: $ => choice(
            $._number,
            $._signal_identifier,
            $.hier_port
        ),

        //signal: $ => alias($._signal, $.signal),
        //signal: $ => seq(optional('~'), $._signal),
        //jtag_signal: $ => alias($._signal, $._jtag_signal),
        concat_signal: $ => prec.left(seq(
            $.signal,
            repeat(seq(',', $.signal))
        )),

        _signal_identifier: $ => prec.left(choice(
            $.scalar_identifier,
            $.vector_identifier
        )),
        concat_number: $ => seq(
            optional('~'),
            $._number,
            repeat(seq(
                ',',
                optional('~'),
                $._number
            )),
        ),

        concat_number_list: $ => prec.left(seq(
            $.concat_number,
            repeat(seq('|', $.concat_number))
        )),

        concat_hier_data_signal: $ => prec.left(seq(
            optional('~'),
            $.hier_data_signal,
            repeat(seq(
                ',',
                optional('~'),
                $.hier_data_signal
            )),
        )),

        hier_data_signal: $ => seq(
            repeat(seq($.scalar_identifier, '.')),
            $._signal_identifier,
        ),

        _number: $ => prec.left(choice(
            $._unsized_number,
            $._sized_number,
            $.integer_expression
        )),

        size: $ => choice(
            $.positive_integer,
            seq('$', $.scalar_identifier)
        ),

        unsized_binary_number: $ => seq(
            '\'', choice('b', 'B'), repeat(choice(' ', '\t')), /[01Xx][01Xx_]*/,
        ),
        sized_binary_number: $ => seq($.size, $.unsized_binary_number),


        concat_string: $ => seq(
            prec(1, choice($.string, $.parameter_reference)),
            repeat(seq(',', choice($.string, $.parameter_reference))),
        ),

        string: $ => seq(
            '"',
            repeat(choice(
                $.string_content,
                $.escape_sequence
            )),
            '"',
        ),

        string_content: $ => seq(token.immediate(prec(1, /[^"\\]+/))),

        integer_expression: $ => $._integer_expression_lvl1,

        _integer_expression_lvl1: $ => prec.left(seq(
            $._integer_expression_lvl2,
            repeat(seq(
                choice('+', '-'),
                $._integer_expression_lvl1
            ))
        )),
