corpus/instance.txt
==================
Attributes declarations
==================
Attribute foo;
Attribute foo = 1;
Attribute foo = "bar";
Attribute foo = 1, 2;
Attribute foo = "bar", "baz";
---
(source_file
  (attribute_definition (scalar_identifier))
  (attribute_definition (scalar_identifier)
    (attribute_value (concat_number (positive_integer))))
  (attribute_definition (scalar_identifier)
    (attribute_value (concat_string (string (string_content)))))
  (attribute_definition (scalar_identifier)
    (attribute_value (concat_number (positive_integer) (positive_integer))))
  (attribute_definition (scalar_identifier)
    (attribute_value (concat_string
       (string (string_content)) (string (string_content))))))

==================
Instance
==================
Instance bar Of baz;
Instance bar Of scope::baz;
Instance bar Of baz {
    Attribute grault;
    InputPort qux = 1;
    AllowBroadcastOnScanInterface quux;
    Parameter corge = 1;
    AddressValue 1;
}
---
(source_file
    (instance_definition (scalar_identifier) (scalar_identifier))
    (instance_definition (scalar_identifier) (scope (scalar_identifier)) (scalar_identifier))
    (instance_definition (scalar_identifier) (scalar_identifier)
        (attribute_definition (scalar_identifier))
        (input_port_connection (scalar_identifier) (concat_signal (signal (positive_integer))))
        (allow_broadcast_definition (scalar_identifier))
        (parameter_override (scalar_identifier) (parameter_value (concat_number (positive_integer))))
        (address_value (positive_integer))))

==================
Scan Register
==================
ScanRegister bar;
ScanRegister bar {
    Attribute qux;
    ScanInSource quux;
    DefaultLoadValue 1;
    CaptureSource 1;
    ResetValue 1;
}
---
(source_file
    (scan_register_definition (scalar_identifier))
    (scan_register_definition (scalar_identifier)
        (attribute_definition (scalar_identifier))
        (scan_in_source (concat_signal (signal (scalar_identifier))))
        (default_load_value (concat_number (positive_integer)))
        (capture_source (concat_signal (signal (positive_integer))))
        (reset_value (concat_number (positive_integer)))))

==================
Data Register
==================
DataRegister bar {
    Attribute bar;
    ResetValue 1;
    DefaultLoadValue 1;
    RefEnum enum_name;
    WriteDataSource qux;
    WriteEnSource quux;
    AddressValue 1;
    WriteCallBack some_scope::some_proc some_args;
    ReadCallBack some_scope::some_proc some_args;
    ReadDataSource corge;
}
---
(source_file
    (data_register_definition (scalar_identifier)
        (attribute_definition (scalar_identifier))
        (reset_value (concat_number (positive_integer)))
        (default_load_value (concat_number (positive_integer)))
        (ref_enum (enum_name))
        (selectable (write_data_source (concat_signal (signal (scalar_identifier)))))
        (selectable (write_en_source (signal (scalar_identifier))))
        (addressable (positive_integer))
        (write_callback (i_proc_namespace (scope (scalar_identifier))
            (scalar_identifier)) (i_proc_name (scalar_identifier)))
        (read_callback (read_callback_proc (i_proc_namespace (scope (scalar_identifier))
            (scalar_identifier)) (i_proc_name (scalar_identifier))))
        (read_callback (read_data_source (concat_signal (signal (scalar_identifier)))))))

==================
One Hot
==================
OneHotScanGroup foo { Port bar; }
OneHotDataGroup foo { Port bar; }
OneHotDataGroup foo {
    Port bar;
    DataRegister baz;
    Instance qux Of quux;
}
---
(source_file
  (onehot_scan_group_definition
    (scalar_identifier)
    (onehot_scan_group_item
      (concat_signal
        (signal
          (scalar_identifier)))))
  (onehot_data_group_definition
    (scalar_identifier)
    (onehot_data_group_port_source
      (concat_signal
        (signal
          (scalar_identifier)))))
  (onehot_data_group_definition
    (scalar_identifier)
    (onehot_data_group_port_source
      (concat_signal
        (signal
          (scalar_identifier))))
    (data_register_definition
      (scalar_identifier))
    (instance_definition
      (scalar_identifier)
      (scalar_identifier))))

==================
Scan Interface
==================
ScanInterface foo {
    Attribute bar;
    Port baz;
    DefaultLoadValue 1;
    Chain qux {
        Attribute qux_foo;
        Port qux_bar;
        DefaultLoadValue 1;
    }
}
---
(source_file
  (scan_interface_definition
    (scalar_identifier)
    (attribute_definition
      (scalar_identifier))
    (scan_interface_port_definition
      (concat_signal
        (signal
          (scalar_identifier))))
    (default_load_definition
      (concat_number
        (positive_integer)))
    (scan_interface_chain_definition
      (scalar_identifier)
      (attribute_definition
        (scalar_identifier))
      (scan_interface_port_definition
        (concat_signal
          (signal
            (scalar_identifier))))
      (default_load_definition
        (concat_number
          (positive_integer))))))

==================
Access Link
==================
AccessLink foo Of bar { "Generic Text" }
AccessLink foo Of STD_1149_1_2001 {
    BSDLEntity bar;
    ijtag_en {
        ScanInterface { qux.quux; }
        ActiveSignals { corge; }
    }
}
---
(source_file
  (access_generic_link_definition
    (scalar_identifier)
    (scalar_identifier)
    (string
      (string_content)))
  (access_link_1149_definition
    (scalar_identifier)
    (bsdl_entity
      (scalar_identifier))
    (bsdl_instruction_reference
      (scalar_identifier)
      (bsdl_instruction_selected_item
        (access_link_1149_scan_interface_name
          (scalar_identifier)
          (signal
            (scalar_identifier))))
      (bsdl_instruction_selected_item
        (access_link_1149_active_signal_name
          (scalar_identifier))))))

==================
Alias
==================
Alias foo = bar;
Alias foo = bar {
    Attribute baz;
    AccessTogether;
    iApplyEndState 1;
    RefEnum qux;
}
---
(source_file
  (alias_definition
    (scalar_identifier)
    (concat_hier_data_signal
      (hier_data_signal
        (scalar_identifier))))
  (alias_definition
    (scalar_identifier)
    (concat_hier_data_signal
      (hier_data_signal
        (scalar_identifier)))
    (alias_item
      (attribute_definition
        (scalar_identifier)))
    (alias_item)
    (alias_item
      (alias_iApplyEndState
        (concat_number
          (positive_integer))))
    (alias_item
      (alias_refEnum
        (enum_name)))))

==================
Enum
==================
Enum foo { bar = 1; baz = 2; }
---
(source_file
  (enum_definition
    (enum_name)
    (enum_item
      (scalar_identifier)
      (concat_number
        (positive_integer)))
    (enum_item
      (scalar_identifier)
      (concat_number
        (positive_integer)))))
