corpus/mux.txt
==================
Scan Mux
==================
ScanMux foo SelectedBy sel[1:0] {
    2'b01 : bar;
    2'b10 : baz;
    2'bxx : qux;
}
---
(source_file
    (scan_mux_definition (scalar_identifier)
    (concat_signal (signal (vector_identifier (scalar_identifier)
        (range
            (index (integer_expression (positive_integer)))
            (index (integer_expression (positive_integer)))))))
    (mux_body (concat_number_list
        (concat_number (sized_binary_number
            (size (positive_integer)) (unsized_binary_number))))
        (concat_signal (signal (scalar_identifier))))
    (mux_body (concat_number_list
        (concat_number (sized_binary_number
            (size (positive_integer)) (unsized_binary_number))))
        (concat_signal (signal (scalar_identifier))))
    (mux_body (concat_number_list
        (concat_number (sized_binary_number
            (size (positive_integer)) (unsized_binary_number))))
        (concat_signal (signal (scalar_identifier))))))
==================
Data Mux
==================
DataMux foo SelectedBy sel[1:0] {
    2'b01 : bar;
    2'b10 : baz;
    2'bxx : qux;
}
---
(source_file
    (data_mux_definition (scalar_identifier)
    (concat_signal (signal (vector_identifier (scalar_identifier)
        (range 
            (index (integer_expression (positive_integer)))
            (index (integer_expression (positive_integer)))))))
    (mux_body (concat_number_list
        (concat_number (sized_binary_number
            (size (positive_integer)) (unsized_binary_number))))
        (concat_signal (signal (scalar_identifier))))
    (mux_body (concat_number_list
        (concat_number (sized_binary_number
            (size (positive_integer)) (unsized_binary_number))))
        (concat_signal (signal (scalar_identifier))))
    (mux_body (concat_number_list
        (concat_number (sized_binary_number
            (size (positive_integer)) (unsized_binary_number))))
        (concat_signal (signal (scalar_identifier))))))
==================
Clock Mux
==================
ClockMux foo SelectedBy sel[1:0] {
    2'b01 : bar;
    2'b10 : baz;
    2'bxx : qux;
}
---
(source_file
    (clock_mux_definition (scalar_identifier)
    (concat_signal (signal (vector_identifier (scalar_identifier)
        (range 
            (index (integer_expression (positive_integer)))
            (index (integer_expression (positive_integer)))))))
    (mux_body (concat_number_list
        (concat_number (sized_binary_number
            (size (positive_integer)) (unsized_binary_number))))
        (concat_signal (signal (scalar_identifier))))
    (mux_body (concat_number_list
        (concat_number (sized_binary_number
            (size (positive_integer)) (unsized_binary_number))))
        (concat_signal (signal (scalar_identifier))))
    (mux_body (concat_number_list
        (concat_number (sized_binary_number
            (size (positive_integer)) (unsized_binary_number))))
        (concat_signal (signal (scalar_identifier))))))
